luci-theme-rosy: Fixed modal box misalignment problem

--- a/themes/luci-theme-rosy/htdocs/luci-static/rosy/cascade.css
+++ b/themes/luci-theme-rosy/htdocs/luci-static/rosy/cascade.css
@@ -1886,6 +1886,25 @@ footer {
     right: 0;
 }
 
+.modal-overlay-active #modal_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #000000b8;
+    z-index: 2000;
+}
+
+.modal-overlay-active #modal_overlay .modal {
+    width: 50%;
+    background-color: #fff;
+    margin: 150px auto;
+    border-radius: 20px;
+    color: #333;
+}
+
 /* The style of the prompt message */
 
 .alert-message {
